# MaCode

./: .aider.conf.yml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SOURCEMAP_SPEC.md  eslint.config.mjs  package-lock.json  package.json  progress.md  project.yaml  pyproject.toml  python3  requirements-dev.txt  requirements.txt
.agents/skills/: animation-basics  manim-composer  manimce-best-practices  manimgl-best-practices  motion-canvas  motion-canvas-agent
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.windsurf/: rules.md
assets/shaders/: _registry.json
docs/: C-shader-pipeline-plan.md  PRD-draft.md  README.md  SOURCEMAP_SPEC.md  adr-012-mc-engine-split.md  agent-config-source.md  architecture.md  async-review-demo.sh  auto-fix-design.md  host-agent-skill-plan.md  memo-refactor-journal.md  narrative-integration-plan.md  progress.md  reduction-plan-deletion-risk.md  refactor-todo.md  roadmap.md  security-architecture.md  shader-preview-design.md  sourcemap-protocol.md  task-state-schema.md  test-plan.md
docs/archive/: TOMBSTONES.md
docs/baseline/: SPRINT0-SUBAGENTS.md  SPRINT1-SUBAGENTS.md  SPRINT2-SUBAGENTS.md  SPRINT3-SUBAGENTS.md  escape-hatches.md  snapshot-2026-05-13.json
engines/: sourcemap.schema.json
engines/manim/: SOURCEMAP.md  check-registry.json  engine.conf  sourcemap.json
engines/manimgl/: SOURCEMAP.md  check-registry.json  engine.conf  sourcemap.json
engines/motion_canvas/: SOURCEMAP.md  capture.html  check-registry.json  engine.conf  sourcemap.json  vite.config.ts
experimental/archived-layout-compiler/: SKILL.md  (+2 more)
pipeline/: __init__.py  add_audio.sh  audio-analyze.sh  cache.sh  composite-render.py  composite-unified-render.py  compress.sh  concat.sh  deliver.py  fade.sh  preview.sh  render-scene.py  render.sh  render_scene_legacy.py  smart-cut.sh  thumbnail.sh  validate-manifest.py
tests/: lib.sh
(+294 files in other folders)
